<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/fca_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fca_button_container"
            android:layout_marginBottom="25sp"
            android:foregroundGravity="top"
            android:gravity="center"
            android:text="@string/google_pay" />

        <RelativeLayout
            android:id="@+id/fca_button_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/fca_signup_button"
                android:layout_width="260sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25sp"
                android:background="@android:color/holo_blue_light"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/fca_login_button"
                android:layout_width="260sp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fca_signup_button"
                android:background="@color/cardview_dark_background"
                android:text="@string/log_in"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fca_button_container"
            android:layout_marginTop="15sp"
            android:gravity="center">

            <Button
                android:id="@+id/fca_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:padding="5sp"
                android:text="@string/forgot_password"
                android:textColor="@android:color/holo_blue_light"
                android:textSize="12sp" />

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>