<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Profile Info-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/fp_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35sp"
            android:layout_marginTop="15sp"
            android:gravity="center"
            android:text="@string/profile"
            android:textColor="@android:color/holo_blue_light" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fp_title"
            android:padding="15sp">

            <!--Name-->
            <RelativeLayout
                android:id="@+id/fp_name_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/fp_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5sp"
                    android:text="@string/name"
                    android:textColor="@android:color/holo_blue_light" />

                <TextView
                    android:id="@+id/fp_name_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/fp_name_title"
                    android:padding="5sp" />
            </RelativeLayout>

            <!--Email-->
            <RelativeLayout
                android:id="@+id/fp_email_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/fp_name_container">

                <TextView
                    android:id="@+id/fp_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="start"
                    android:padding="5sp"
                    android:text="@string/email"
                    android:textColor="@android:color/holo_blue_light" />

                <TextView
                    android:id="@+id/fp_email_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/fp_email_title"
                    android:gravity="start"
                    android:padding="5sp" />


            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>